--- a/src/main/resources/br/com/washii/view/agendamentos/cliente-agendamento.fxml
+++ b/src/main/resources/br/com/washii/view/agendamentos/cliente-agendamento.fxml
@@ -3,22 +3,31 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
+<?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<ScrollPane fitToWidth="true" prefHeight="650.0" prefWidth="850.0" styleClass="background-transparente" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.presentation.agendamentos.ClienteAgendamentoController">
+<ScrollPane fitToWidth="true" styleClass="background-transparente" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.presentation.agendamentos.ClienteAgendamentoController">
    <content>
-      <VBox alignment="TOP_CENTER" styleClass="background-transparente">
+      <VBox alignment="TOP_CENTER" spacing="25.0" styleClass="background-transparente">
+         <padding>
+            <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+         </padding>
          <children>
-            <VBox maxWidth="800.0" spacing="25.0" styleClass="background-transparente">
+            <VBox maxWidth="800.0" spacing="25.0">
                <children>
                   <VBox spacing="5.0">
                      <children>
@@ -30,7 +39,7 @@
                         <HBox alignment="CENTER_LEFT" spacing="10.0">
                            <children>
                               <Circle fill="#dadada" radius="5.0" />
-                              <Label fx:id="lblNomeLavaJato" styleClass="texto-comum" text="Clean Car - Rua da Praia, 789" />
+                              <Label fx:id="lblNomeLavaJato" styleClass="texto-comum" text="Carregando nome do estabelecimento..." />
                            </children>
                         </HBox>
                      </children>
@@ -38,107 +47,125 @@
       
                   <VBox styleClass="container-generic">
                      <children>
-                        <GridPane hgap="30.0" vgap="15.0">
+                        <GridPane hgap="30.0" vgap="20.0">
                            <columnConstraints>
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" />
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" />
                            </columnConstraints>
                            <rowConstraints>
-                              <RowConstraints minHeight="10.0" vgrow="NEVER" />
                               <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                               <RowConstraints minHeight="10.0" vgrow="NEVER" />
                            </rowConstraints>
+                           <padding>
+                              <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                           </padding>
                            <children>
                               
-                              <VBox spacing="20.0" GridPane.rowIndex="1">
+                              <VBox spacing="15.0">
                                  <children>
-                                    <VBox spacing="5.0">
-                                       <Label styleClass="texto-titulo" text="Dados do Serviço">
-                                          <font><Font name="System Bold" size="16.0" /></font>
-                                       </Label>
-                                    </VBox>
+                                    <Label styleClass="texto-titulo" text="Dados do Agendamento">
+                                       <font><Font name="System Bold" size="16.0" /></font>
+                                    </Label>
 
                                     <VBox spacing="5.0">
-                                       <Label styleClass="texto-comum" text="Escolha o Serviço" textFill="#555555" />
-                                       <ComboBox fx:id="cmbTipoServico" maxWidth="1.7976931348623157E308" prefHeight="30.0" style="-fx-background-radius: 5;" />
+                                       <children>
+                                          <Label styleClass="texto-comum" text="Escolha o Serviço" textFill="#555555" />
+                                          <HBox spacing="10.0">
+                                             <children>
+                                                <ComboBox fx:id="cmbTipoServico" maxWidth="1.7976931348623157E308" prefHeight="35.0" promptText="Selecione um serviço" HBox.hgrow="ALWAYS" />
+                                                <Button fx:id="btnAdicionar" mnemonicParsing="false" prefHeight="35.0" prefWidth="40.0" styleClass="button-primary" text="+" />
+                                             </children>
+                                          </HBox>
+                                       </children>
                                     </VBox>
 
-                                    <VBox spacing="5.0">
-                                       <Label styleClass="texto-comum" text="Veículo" textFill="#555555" />
-                                       <ComboBox fx:id="cmbModeloCarro" maxWidth="1.7976931348623157E308" prefHeight="30.0" promptText="Selecione o Modelo" style="-fx-background-radius: 5;" />
-                                    </VBox>
-
-                                    <VBox spacing="5.0">
-                                       <Label styleClass="texto-comum" text="Placa" textFill="#555555" />
-                                       <TextField fx:id="txtPlaca" prefHeight="30.0" promptText="ABC-1234" style="-fx-background-radius: 5;" />
+                                    <VBox prefWidth="365.0" spacing="10.0" VBox.vgrow="ALWAYS">
+                                       <children>
+                                          <TableView fx:id="tblServicos" prefHeight="180.0">
+                                            <columns>
+                                              <TableColumn fx:id="colServico" prefWidth="75.0" text="Serviço" />
+                                              <TableColumn fx:id="colPreco" maxWidth="100.0" minWidth="80.0" prefWidth="90.0" text="Preço" />
+                                            </columns>
+                                             <columnResizePolicy>
+                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                             </columnResizePolicy>
+                                          </TableView>
+                                          
+                                          <HBox alignment="CENTER_LEFT" spacing="10.0">
+                                             <children>
+                                                <Button fx:id="btnRemover" mnemonicParsing="false" style="-fx-background-color: #e74c3c; -fx-background-radius: 5;">
+                                                   <graphic>
+                                                      <FontIcon iconColor="WHITE" iconLiteral="mdi2t-trash-can" iconSize="18" />
+                                                   </graphic>
+                                                </Button>
+                                                <Region HBox.hgrow="ALWAYS" />
+                                                <Label styleClass="texto-comum" text="Total:" />
+                                                <Label fx:id="lblValorTotal" style="-fx-font-weight: bold;" styleClass="texto-titulo" text="R$ 0,00" />
+                                             </children>
+                                          </HBox>
+                                       </children>
                                     </VBox>
                                  </children>
                               </VBox>
 
-                              <VBox spacing="15.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                              <VBox spacing="15.0" GridPane.columnIndex="1">
                                  <children>
-                                    <Label styleClass="texto-titulo" text="Data e Hora">
-                                       <font><Font name="System Bold" size="16.0" /></font>
-                                    </Label>
-                                    
-                                    <VBox style="-fx-border-color: #e0e0e0; -fx-border-radius: 5; -fx-padding: 10;">
+                                    <VBox prefHeight="59.0" prefWidth="365.0" spacing="5.0">
                                        <children>
-                                          <Label alignment="CENTER" maxWidth="Infinity" styleClass="texto-comum" text="Janeiro 2026" textFill="#333333">
-                                              <font><Font name="System Bold" size="14.0"/></font>
-                                              <padding><Insets bottom="10"/></padding>
-                                          </Label>
-                                          <GridPane fx:id="gridCalendario" alignment="CENTER" hgap="10.0" vgap="10.0">
-                                            <columnConstraints>
-                                                <ColumnConstraints halignment="CENTER" prefWidth="30" />
-                                                <ColumnConstraints halignment="CENTER" prefWidth="30" />
-                                                <ColumnConstraints halignment="CENTER" prefWidth="30" />
-                                                <ColumnConstraints halignment="CENTER" prefWidth="30" />
-                                                <ColumnConstraints halignment="CENTER" prefWidth="30" />
-                                                <ColumnConstraints halignment="CENTER" prefWidth="30" />
-                                                <ColumnConstraints halignment="CENTER" prefWidth="30" />
-                                            </columnConstraints>
-                                            <children>
-                                                <Label text="D" textFill="#999" /><Label text="S" textFill="#999" GridPane.columnIndex="1" /><Label text="T" textFill="#999" GridPane.columnIndex="2" /><Label text="Q" textFill="#999" GridPane.columnIndex="3" /><Label text="Q" textFill="#999" GridPane.columnIndex="4" /><Label text="S" textFill="#999" GridPane.columnIndex="5" /><Label text="S" textFill="#999" GridPane.columnIndex="6" />
-                                                
-                                                <Button text="1" style="-fx-background-color: transparent;" GridPane.rowIndex="1" />
-                                                <Button text="5" style="-fx-background-color: #333333; -fx-text-fill: white; -fx-background-radius: 15;" GridPane.rowIndex="1" GridPane.columnIndex="4" />
-                                            </children>
-                                          </GridPane>
+                                          <Label styleClass="texto-comum" text="Veículo" textFill="#555555" />
+                                          <ComboBox fx:id="cmbModeloCarro" maxWidth="1.7976931348623157E308" prefHeight="35.0" promptText="Selecione o seu veículo" />
                                        </children>
                                     </VBox>
 
                                     <VBox spacing="5.0">
-                                       <Label styleClass="texto-comum" text="Horários Disponíveis" textFill="#555555" />
-                                       <HBox spacing="10.0">
-                                          <Button text="09:00" style="-fx-background-color: transparent; -fx-border-color: #ddd; -fx-border-radius: 5;" />
-                                          <Button text="10:00" style="-fx-background-color: #333333; -fx-text-fill: white; -fx-background-radius: 5;" />
-                                       </HBox>
+                                       <children>
+                                          <Label styleClass="texto-comum" text="Placa" textFill="#555555" />
+                                          <TextField fx:id="txtPlaca" prefHeight="35.0" promptText="ABC-1234" />
+                                       </children>
+                                    </VBox>
+                                    
+                                    <VBox spacing="5.0">
+                                       <children>
+                                          <Label styleClass="texto-titulo" text="Data e Hora">
+                                             <font><Font name="System Bold" size="16.0" /></font>
+                                          </Label>
+                                          <DatePicker fx:id="dateData" maxWidth="1.7976931348623157E308" prefHeight="35.0" promptText="Selecione a data" />
+                                       </children>
+                                    </VBox>
+
+                                    <VBox spacing="10.0" VBox.vgrow="ALWAYS">
+                                       <children>
+                                          <Label styleClass="texto-comum" text="Horários Disponíveis" textFill="#555555" />
+                                          <ScrollPane fitToWidth="true" hbarPolicy="NEVER" prefHeight="150.0" styleClass="background-transparente">
+                                             <content>
+                                                <FlowPane fx:id="fpHorarios" hgap="10.0" vgap="10.0">
+                                                   <padding>
+                                                      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                                   </padding>
+                                                </FlowPane>
+                                             </content>
+                                          </ScrollPane>
+                                       </children>
                                     </VBox>
                                  </children>
                               </VBox>
 
-                              <HBox alignment="CENTER_RIGHT" spacing="15.0" GridPane.columnSpan="2" GridPane.rowIndex="2">
+                              <HBox alignment="CENTER_RIGHT" spacing="15.0" GridPane.columnSpan="2" GridPane.rowIndex="1">
                                  <children>
-                                    <Button fx:id="btnCancelar" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" styleClass="button-secondary" text="Cancelar" />
-                                    <Button fx:id="btnConfirmar" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" styleClass="button-primary" text="Confirmar" />
+                                    <Button fx:id="btnCancelar" mnemonicParsing="false" prefHeight="35.0" prefWidth="120.0" styleClass="button-secondary" text="Cancelar" />
+                                    <Button fx:id="btnConfirmar" mnemonicParsing="false" prefHeight="35.0" prefWidth="180.0" styleClass="button-primary" text="Confirmar Agendamento" />
                                  </children>
                                  <padding>
-                                    <Insets top="20.0" />
+                                    <Insets top="10.0" />
                                  </padding>
                               </HBox>
                            </children>
-                           <padding>
-                              <Insets bottom="10.0" left="15.0" right="15.0" top="10.0" />
-                           </padding>
                         </GridPane>
                      </children>
                   </VBox>
                </children>
             </VBox>
          </children>
-         <padding>
-            <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
-         </padding>
       </VBox>
    </content>
 </ScrollPane>
