--- a/src/main/resources/br/com/washii/view/home/home-negocio.fxml
+++ b/src/main/resources/br/com/washii/view/home/home-negocio.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane fx:id="homeNegocio" fitToWidth="true" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.presentation.home.HomeNegocioController">
+<ScrollPane fx:id="homeNegocio" fitToWidth="true" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.presentation.screens.home.HomeNegocioController">
    <content>
       <VBox spacing="20.0" style="-fx-background-color: #F8F9FA;">
          <children>
