--- a/src/main/resources/br/com/washii/view/acesso/cadastro.fxml
+++ b/src/main/resources/br/com/washii/view/acesso/cadastro.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.text.TextFlow?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="530.0" prefWidth="450.0" spacing="10.0" styleClass="login-content" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.presentation.acesso.CadastroController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="530.0" prefWidth="450.0" spacing="10.0" styleClass="login-content" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.presentation.screens.acesso.CadastroController">
    <children>
       <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="110.0" prefWidth="416.0">
          <children>
