--- a/src/main/resources/br/com/washii/view/agendamentos/meus-agendamentos-cliente.fxml
+++ b/src/main/resources/br/com/washii/view/agendamentos/meus-agendamentos-cliente.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane fitToWidth="true" prefHeight="400.0" prefWidth="600.0" styleClass="background-transparente" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.presentation.agendamentos.MeusAgendamentosClienteController">
+<ScrollPane fitToWidth="true" prefHeight="400.0" prefWidth="600.0" styleClass="background-transparente" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.presentation.screens.agendamentos.MeusAgendamentosClienteController">
    <content>
       <VBox spacing="20.0" styleClass="background-transparente">
          <children>
