--- a/src/main/resources/br/com/washii/view/home/home-cliente.fxml
+++ b/src/main/resources/br/com/washii/view/home/home-cliente.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane fx:id="homeCliente" fitToWidth="true" maxWidth="1.7976931348623157E308" prefHeight="650.0" styleClass="background-transparente" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.presentation.home.HomeClienteController">
+<ScrollPane fx:id="homeCliente" fitToWidth="true" maxWidth="1.7976931348623157E308" prefHeight="650.0" styleClass="background-transparente" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.presentation.screens.home.HomeClienteController">
    <content>
       <VBox alignment="TOP_CENTER" styleClass="background-transparente">
          <children>
