--- a/src/main/resources/br/com/washii/view/perfil/perfil-usuario.fxml
+++ b/src/main/resources/br/com/washii/view/perfil/perfil-usuario.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.text.TextFlow?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<ScrollPane fitToWidth="true" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.presentation.perfil.PerfilClienteController">
+<ScrollPane fitToWidth="true" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.presentation.screens.perfil.PerfilClienteController">
    <content>
       <VBox spacing="40.0" style="-fx-background-color: transparent;">
          <children>
