--- a/src/main/resources/br/com/washii/view/components/cards/agendamento-card.fxml
+++ b/src/main/resources/br/com/washii/view/components/cards/agendamento-card.fxml
@@ -48,6 +48,7 @@
                   <Font size="13.0" />
                </font>
             </Label>
+            <Label fx:id="lbltelefoneLabel" text="Numero" />
          </children>
          <padding>
             <Insets left="15.0" />
