--- a/src/main/resources/br/com/washii/view/agendamentos/meus-agendamentos-negocio.fxml
+++ b/src/main/resources/br/com/washii/view/agendamentos/meus-agendamentos-negocio.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane fitToWidth="true" prefHeight="600.0" prefWidth="800.0" styleClass="background-transparente" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.presentation.agendamentos.MeusAgendamentosNegocioController">
+<ScrollPane fitToWidth="true" prefHeight="600.0" prefWidth="800.0" styleClass="background-transparente" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.presentation.screens.agendamentos.MeusAgendamentosNegocioController">
    <content>
       <VBox spacing="20.0" styleClass="background-transparente">
          <children>
@@ -24,9 +24,9 @@
                </font>
             </Label>
 
-            <VBox style="-fx-background-color: white; -fx-background-radius: 8; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.1), 5, 0, 0, 2);">
+            <VBox prefHeight="143.0" prefWidth="740.0" style="-fx-background-color: white; -fx-background-radius: 8; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.1), 5, 0, 0, 2);">
                <children>
-                  <GridPane hgap="20.0" vgap="15.0">
+                  <GridPane hgap="20.0" prefHeight="108.0" prefWidth="700.0" vgap="15.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="40.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="40.0" />
@@ -35,6 +35,8 @@
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
                         <VBox spacing="5.0">
@@ -51,10 +53,10 @@
                            </children>
                         </VBox>
 
-                        <HBox alignment="BOTTOM_RIGHT" spacing="10.0" GridPane.columnIndex="2" GridPane.rowSpan="2" GridPane.valignment="BOTTOM">
+                        <HBox alignment="BOTTOM_RIGHT" prefHeight="35.0" prefWidth="115.0" spacing="10.0" GridPane.columnIndex="2" GridPane.rowIndex="1" GridPane.rowSpan="2" GridPane.valignment="BOTTOM">
                            <children>
-                              <Button fx:id="btnLimpar" mnemonicParsing="false" onAction="#onLimparFiltro" prefHeight="35.0" style="-fx-background-color: #f0f0f0; -fx-text-fill: #333;" text="Limpar" />
-                              <Button fx:id="btnFiltrar" mnemonicParsing="false" onAction="#onFiltrar" prefHeight="35.0" style="-fx-background-color: #007bff; -fx-text-fill: white; -fx-font-weight: bold;" text="Filtrar" />
+                              <Button fx:id="btnLimpar" mnemonicParsing="false" onAction="#onLimparFiltro" prefHeight="35.0" prefWidth="61.0" styleClass="button-primary" text="Limpar" />
+                              <Button fx:id="btnFiltrar" mnemonicParsing="false" onAction="#onFiltrar" prefHeight="35.0" styleClass="button-secondary" text="Filtrar" />
                            </children>
                         </HBox>
                      </children>
@@ -65,7 +67,7 @@
                </padding>
             </VBox>
 
-            <FlowPane fx:id="flowCards" hgap="20.0" vgap="20.0" styleClass="background-transparente">
+            <FlowPane fx:id="flowCards" hgap="20.0" styleClass="background-transparente" vgap="20.0">
                </FlowPane>
          </children>
          <padding>
