--- a/src/main/resources/br/com/washii/view/acesso/login.fxml
+++ b/src/main/resources/br/com/washii/view/acesso/login.fxml
@@ -69,9 +69,10 @@
             </PasswordField>
          </children>
       </HBox>
-      <HBox maxWidth="1.7976931348623157E308" spacing="10.0">
+      <HBox alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" spacing="10.0">
          <children>
-            <TextFlow fx:id="errorContainer" styleClass="error-container" visible="false" HBox.hgrow="ALWAYS" />
+            <TextFlow fx:id="conteinerAviso" styleClass="error-container" visible="false" HBox.hgrow="ALWAYS" />
+            <Region HBox.hgrow="SOMETIMES" />
             <Hyperlink fx:id="lnkEsqueciSenha" layoutX="269.0" layoutY="10.0" minWidth="-Infinity" onAction="#onEsqueciSenha" text="Esqueci a senha" />
          </children>
       </HBox>
